# openocd

./: PLAN.md
doc/: cortex_r5_cti_smp_plan.md  openocd.texi
testing/: Makefile.am
testing/cortex-r5-cti/: README.md  run_cti_validation.py
testing/examples/cortex-r5-cti/: README.md  bkpt.c  cti_test.ld  makefile  spin.c  step.c
