# SPDX-License-Identifier: GPL-2.0-or-later

SUBDIRS = tcl_commands
DIST_SUBDIRS = tcl_commands

EXTRA_DIST = \
	cortex-r5-cti/README.md \
	cortex-r5-cti/run_cti_validation.py \
	examples/cortex-r5-cti/README.md \
	examples/cortex-r5-cti/makefile \
	examples/cortex-r5-cti/cti_test.ld \
	examples/cortex-r5-cti/spin.c \
	examples/cortex-r5-cti/bkpt.c \
	examples/cortex-r5-cti/step.c
